--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,16 @@ dependencies {
     testCompile "org.mockito:mockito-all:${verMockito}"
 }
 
+task fatJar(type: Jar) {
+    baseName = project.name + '-all'
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    with jar
+}
+
 test {
     useTestNG()
 }
