First version working with the DatasetSimulation use case.

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ version = '0.0.1-SNAPSHOT'
 ext.libraryName = "liaison-hbase-${version}"
 ext.verGuava = '18.0'
 ext.verMockito = '1.10.19'
-ext.verPhoenixCommons = '0.0.2-SNAPSHOT'
+ext.verPhoenixCommons = '0.0.1-SNAPSHOT'
 ext.verPool = '2.3'
 ext.verQuasar  = '0.6.2'
 ext.verTestNG  = '6.8.21'
@@ -73,7 +73,7 @@ jar {
 }
 
 dependencies {
-    compile "com.liaison.phoenix:phoenix-commons:0.0.1-SNAPSHOT"
+    compile "com.liaison.phoenix:phoenix-commons:${verPhoenixCommons}"
     compile "com.google.guava:guava:${verGuava}"
     compile "co.paralleluniverse:quasar-core:${verQuasar}${classifier}"
     provided "org.apache.hbase:hbase-client:${verHBase}"
@@ -109,6 +109,14 @@ uploadArchives {
        flatDir {
            dirs 'repos'
        }
+    }
+}
+
+if (project.hasProperty('mainClass')) {
+    task execute(type: JavaExec) {
+        main = mainClass
+        classpath = sourceSets.main.runtimeClasspath
+        standardInput = System.in
     }
 }
 
