--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ if (project.hasProperty('env') && project.getProperty('env') == 'mapr') {
     ext.verZookeeper = '3.4.5-mapr-1406'
 } else {
     ext.verHBase = '0.98.9-hadoop2'
-    ext.verHadoop = '2.5.1'
+    ext.verHadoop = '2.7.1'
     ext.verZookeeper = '3.4.5'
 }
 
@@ -84,6 +84,8 @@ dependencies {
     testCompile group:'org.apache.hadoop', name:'hadoop-common', version:"${verHadoop}", classifier: 'tests'
     testCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}"
     testCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}", classifier: 'tests'
+    testCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}"
+    testCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}", classifier: 'tests'
     testCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoop}"
     testCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoop}", classifier: 'tests'
 }
@@ -106,6 +108,7 @@ task copyToLib( type: Copy ) {
 
 test {
     useTestNG()
+    printf classpath
 }
 
 distributions {
