--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     testCompile group:'org.apache.hadoop', name:'hadoop-common', version:"${verHadoop}", classifier: 'tests'
     testCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}"
     testCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}", classifier: 'tests'
+    testCompile group:'org.apache.hbase', name:'hbase-hadoop-compat', version:"${verHBase}"
+    testCompile group:'org.apache.hbase', name:'hbase-hadoop-compat', version:"${verHBase}", classifier: 'tests'
     testCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}"
     testCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}", classifier: 'tests'
     testCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoop}"
