System property for minicluster test suite; hopefully fix "Thread dump because: Master not initialized after 200000ms seconds" problem

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ task copyToLib( type: Copy ) {
 
 test {
     useTestNG()
+    systemProperty "java.net.preferIPv4Stack", "true"
     printf "!!!!!!!!!! !!!!!!!!!! CLASSPATH: ${classpath.getFiles()}"
 }
 
