Reverting Guava version to 16.0.1  to try to eliminate this error during mini-cluster tests: https://issues.apache.org/jira/browse/HADOOP-11032. (Apparently the fix described in that issue was never merged into the hbase-server project)

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ group = 'com.liaison'
 version = '0.0.1-SNAPSHOT'
 
 ext.libraryName = "liaison-hbase-${version}"
-ext.verGuava = '18.0'
+// ext.verGuava = '18.0'
+ext.verGuava = '16.0.1'
 ext.verMockito = '1.10.19'
 ext.verPhoenixCommons = '0.0.1-SNAPSHOT'
 ext.verPool = '2.3'
