Diagnosing problems running integration tests...

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ configurations {
     }
     testIntConf
     testIntConf {
-        extendsFrom(provided)
+        extendsFrom(provided.copy {
+            exclude group:"com.google.guava", module:"guava"
+        })
         resolutionStrategy {
             force "com.google.guava:guava:${verGuavaTEST}"
             //forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
