Diagnosing problems running integration tests...

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ configurations {
         })
         resolutionStrategy {
             force "com.google.guava:guava:${verGuavaTEST}"
-            //forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
+            forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
         }
     }
 }
