--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,15 @@ configurations {
     }
     testIntConf
     testIntConf {
+        extendsFrom(provided)
+        /*
         extendsFrom(provided.copy {
             exclude group:"com.google.guava", module:"guava"
         })
+        */
         resolutionStrategy {
-            force 'com.google.guava:guava:15.0'
-            forcedModules = ['com.google.guava:guava:15.0']
-            //force "com.google.guava:guava:${verGuavaTEST}"
-            //forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
+            force "com.google.guava:guava:${verGuavaTEST}"
+            forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
         }
     }
 }
