--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,13 @@ configurations {
 }
 
 sourceSets {
-    logger.debug "@@@ configurations.provided (type): " + configurations.provided.getClass()
-    logger.debug "@@@ configurations.testIntConf (type): " + configurations.testIntConf.getClass()
-    logger.debug "@@@ main.compileClasspath (type): " + main.compileClasspath.getClass()
-    logger.debug "@@@ testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
-    logger.debug "@@@ testUnit.runtimeClasspath (type): " + testUnit.runtimeClasspath.getClass()
-    logger.debug "@@@ testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
-    logger.debug "@@@ testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
+    logger.info "@@@ configurations.provided (type): " + configurations.provided.getClass()
+    logger.info "@@@ configurations.testIntConf (type): " + configurations.testIntConf.getClass()
+    logger.info "@@@ main.compileClasspath (type): " + main.compileClasspath.getClass()
+    logger.info "@@@ testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
+    logger.info "@@@ testUnit.runtimeClasspath (type): " + testUnit.runtimeClasspath.getClass()
+    logger.info "@@@ testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
+    logger.info "@@@ testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
     main.compileClasspath += configurations.provided
     testUnit.compileClasspath += configurations.provided
     testUnit.runtimeClasspath += configurations.provided
@@ -62,15 +62,15 @@ sourceSets {
         force "com.google.guava:guava:${verGuavaTEST}"
         forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
     }
-    logger.debug "@@@1 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
-    logger.debug "@@@1 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
+    logger.info "@@@1 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
+    logger.info "@@@1 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
     testIntegration.compileClasspath += configurations.testIntConf
     testIntegration.runtimeClasspath += configurations.testIntConf
-    logger.debug "@@@2 main.compileClasspath (type): " + main.compileClasspath.getClass()
-    logger.debug "@@@2 testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
-    logger.debug "@@@2 testUnit.runtimeClasspath (type): " + testUnit.runtimeClasspath.getClass()
-    logger.debug "@@@2 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
-    logger.debug "@@@2 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
+    logger.info "@@@2 main.compileClasspath (type): " + main.compileClasspath.getClass()
+    logger.info "@@@2 testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
+    logger.info "@@@2 testUnit.runtimeClasspath (type): " + testUnit.runtimeClasspath.getClass()
+    logger.info "@@@2 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
+    logger.info "@@@2 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
 }
 
 allprojects {
